--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@octokit/rest": "^20.0.0",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.8.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
@@ -32,7 +35,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.0",
     "rxjs": "^7.8.0",
-    "simple-git": "^3.20.0"
+    "simple-git": "^3.20.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
