--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-socket.io": "^10.4.15",
+    "@nestjs/websockets": "^10.4.15",
     "@nestjs/platform-express": "^10.0.0",
     "@octokit/rest": "^20.0.0",
     "@types/uuid": "^10.0.0",
@@ -36,6 +38,7 @@
     "rimraf": "^5.0.0",
     "rxjs": "^7.8.0",
     "simple-git": "^3.20.0",
+    "socket.io": "^4.7.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
