--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/websockets": "^10.4.15",
-    "@nestjs/platform-express": "^10.0.0",
     "@octokit/rest": "^20.0.0",
     "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.18.1",
     "axios": "^1.8.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -39,7 +40,8 @@
     "rxjs": "^7.8.0",
     "simple-git": "^3.20.0",
     "socket.io": "^4.7.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
